# service-poke

./: Makefile.am  README  README.md  configure.ac  service-poke.spec.in
examples/: Makefile.am  service-poke.ini  service-poke.php  service-poke.py
man/: Makefile.am  service-poke-server.8  service-poke.8
src/: Makefile.am
src/client/: Makefile.am  service-poke.c
src/libservice-poke/: Makefile.am  php-service-poke.ini  service-poke.c  service-poke.h  service-poke.i  service-poke.pc.in
src/server/: Makefile.am  service-poke-server.c
